arreglos de css

--- a/html/formulario_logeo_foro.html
+++ b/html/formulario_logeo_foro.html
@@ -33,7 +33,7 @@
                 <input type="password" name="password" id="password" >
                 <label for="password">Contraseña</label>
               </p>
-              <p>
+              <p class="flex_boton">
                 <input id="button" type="submit" value="INGRESAR">
               </p>
               
