--- a/html/formulario_creacion_cuenta.html
+++ b/html/formulario_creacion_cuenta.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Indie+Flower&family=Raleway:ital,wght@0,100;1,100&display=swap" rel="stylesheet">
     <!-- flaticon -->
-    <link rel="icon" href="../css/logo.png">
+    <link rel="icon" href="../css/Logo.jpeg">
     <!--Font Awesome-->     
     <script src="https://kit.fontawesome.com/9558700994.js" crossorigin="anonymous"></script>
     
@@ -78,7 +78,7 @@
                 <figure>
                     <!-- ACA IRIA EL LINK PARA LA PAGINA PRINCIPAL? -->
                 <a href="./formulario_logeo_foro.html">
-                    <img src="../css/logo.png" alt="logo gn">
+                    <img src="../css/Logo.jpeg" alt="logo gn">
                 </a>
                 </figure>
 
