--- a/html/formulario_logeo_foro.html
+++ b/html/formulario_logeo_foro.html
@@ -7,7 +7,7 @@
     <!-- css -->
     <link rel="stylesheet" href="../css/css_Logeo.css">
     <!-- flavicon -->
-    <link rel="icon" href="../css/logo.png">
+    <link rel="icon" href="../css/Logo.jpeg">
     <!-- tipo de letra -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,7 +51,7 @@
           <section class="box">
             <figure id="asd">
               <a href="#">
-                <img src="../css/logo.png" alt="logo gn">
+                <img src="../css/Logo.jpeg" alt="logo gn">
               </a>
             </figure>
           </section>
