linkear pagina principal en formulario_creacion_cuenta.html

--- a/html/formulario_creacion_cuenta.html
+++ b/html/formulario_creacion_cuenta.html
@@ -76,8 +76,8 @@
              <section class="box">
         
                 <figure>
-                    <!-- ACA IRIA EL LINK PARA LA PAGINA PRINCIPAL? -->
-                <a href="./formulario_logeo_foro.html">
+                    
+                <a href="../index.html">
                     <img src="../css/Logo.jpeg" alt="logo gn">
                 </a>
                 </figure>
