Completado el index.html

--- a/index.html
+++ b/index.html
@@ -22,23 +22,14 @@
 <body>
   <main class="principal">
 
-    <a href="#" class="mi_perfil"><i class="fa-solid fa-jedi">MI PERFIL</i></a>
+    <a href="./html/formulario_logeo_foro.html" class="mi_perfil"><i class="fa-solid fa-jedi">MI PERFIL</i></a>
     <section class="section1">
       <header class="header">
 
         <section class="headerlogo">
           <img src="./img/gn.jpg" alt="" class="logo-img">
         </section>
-        <section class="buscador">
-
-          <!--<form method="get" class="form"
-            action="https://store.epicgames.com/es-ES/browse?sortBy=releaseDate&sortDir=DESC&category=Game&count=40"
-            target="_blank">
-            <input class="place" type="search" name="q" placeholder="Busca tu juego">
-            <button class="btn btn-primary" type="submit">Buscar</button>
-          </form>-->
-          <input type="hidden">
-        </section>
+        
       </header>
     </section>
 
@@ -55,8 +46,8 @@
         <a href="https://geekspot.com.ar/productos1/gaming/?mpage=2" class="caja" target="_blank">Plataforma</a><!--GET https://www.freetogame.com/api/games?platform=pc
         -->
         <section id="app"></section>
-        <a href="#" class="caja">Foro</a>
-        <a href="#" class="caja">Novedades</a>
+        <a href="foro.html" class="caja">Foro</a>
+        <a href="./Sección novedades/news.html" class="caja">Novedades</a>
 
       </nav>
       <div id="carouselExampleCaptions" class="carousel slide">
@@ -210,7 +201,7 @@
         <section class="box">
           <figure>
             <a href="#">
-              <img src="./img/gn.jpg" alt="logo gn">
+              <img src="gn.jpg" alt="logo gn">
             </a>
           </figure>
         </section>
