Comletado formulario_logeo_foro.html

--- a/html/formulario_logeo_foro.html
+++ b/html/formulario_logeo_foro.html
@@ -50,7 +50,7 @@
         <section class="grupo-1">
           <section class="box">
             <figure id="asd">
-              <a href="#">
+              <a href="../index.html">
                 <img src="../css/Logo.jpeg" alt="logo gn">
               </a>
             </figure>
