Completado news.html

--- a/Sección novedades/news.html
+++ b/Sección novedades/news.html
@@ -23,7 +23,7 @@
 <body>
 	<header>
 
-		<a href="#" class="mi_perfil"><i class="fa-solid fa-jedi">MI PERFIL</i></a>
+		<a href="../html/formulario_logeo_foro.html" class="mi_perfil"><i class="fa-solid fa-jedi">MI PERFIL</i></a>
 
 		<section class="section1">
 			<header class="header">
@@ -51,7 +51,7 @@
 			<nav class="menu">
 				<a href="#" class="caja">Categoria</a>
         		<a href="#" class="caja">Plataforma</a>
-        		<a href="#" class="caja">Foro</a>
+        		<a href="../foro.html" class="caja">Foro</a>
         		<a href="#" class="caja">Novedades</a>
         
       		</nav>
@@ -61,17 +61,7 @@
 		<section id="articles_section">
 			<h2>NOTICIAS - ACTUALIZACIONES</h2>
 
-			<!--
-			<nav>
-				<h3 id="tus_plataformas">Tus plataformas</h3>
-				<ul class="menu_1">
-					<li><a href="#XBOX">Juegos XBOX</a></li>
-					<li><a href="#PC">Juegos PC</a></li>
-					<li><a href="#Playstation">Juegos PlayStation</a></li>
-					<li><a href="#Nintendo">Juegos Nintendo</a></li>
-				</ul>
-			</nav>-->
-
+			
 			<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 				<div class="carousel-indicators">
 				  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -218,7 +208,7 @@
 			<section class="grupo-1">
 			  <section class="box">
 				<figure>
-				  <a href="#">
+				  <a href="../index.html">
 					<img src="./TPO 2023/img/icono pagina.jpg" alt="logo gn">
 				  </a>
 				</figure>
