--- a/foro.html
+++ b/foro.html
@@ -7,15 +7,16 @@
 	<title>Foro</title>
 	<link rel="stylesheet" type="text/css" href="./css/foro.css">
 
-     <!--google fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    	<!--google fonts-->
+    	<link rel="preconnect" href="https://fonts.googleapis.com">
+   	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap" rel="stylesheet">
-
-     <!--Font Awesome-->     
-    <script src="https://kit.fontawesome.com/9558700994.js" crossorigin="anonymous"></script>
+	<!-- Flaticon -->
+	<link rel="icon" href="./css/Logo.jpeg">
+	<!--Font Awesome-->     
+    	<script src="https://kit.fontawesome.com/9558700994.js" crossorigin="anonymous"></script>
     </head>
 
 <body>
