--- a/foro.html
+++ b/foro.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Foro</title>
 	<link rel="stylesheet" type="text/css" href="./css/foro.css">
+	
+	<script src="https://kit.fontawesome.com/e2d5f2ad74.js" crossorigin="anonymous"></script>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+	 integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
     	<!--google fonts-->
     	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +49,7 @@
         <nav class="menu">
             <form method="get" class="form" action="https://store.epicgames.com/es-ES/browse?sortBy=releaseDate&sortDir=DESC&category=Game&count=40"target="_blank">
                 <input class="place" type="search" name="q" placeholder="Busca tu juego">
-                <button class="btn btn-primary" type="submit">Buscar</button>
+                <button class="btn btn-primary" id = "#buscadorBoton" type="submit">Buscar</button>
           </form>
             <a href="https://geekspot.com.ar/productos1/gaming/?mpage=2" class="caja" target="_blank">Plataforma</a>
             <a href="#" class="caja">Foro</a>
