Arreglo redirecciones news.html

--- a/Sección novedades/news.html
+++ b/Sección novedades/news.html
@@ -50,8 +50,8 @@
 			<a href="https://geekspot.com.ar/productos1/gaming/?mpage=2" class="caja" target="_blank">Plataforma</a><!--GET https://www.freetogame.com/api/games?platform=pc
 			-->
 			<section id="app"></section>
-			<a href="foro.html" class="caja">Foro</a>
-			<a href="./Sección novedades/news.html" class="caja">Novedades</a>
+			<a href="../foro.html" class="caja">Foro</a>
+			<a href="#" class="caja">Novedades</a>
 
 		</nav>
 			 
