Arreglo imagen footer foro.html

--- a/foro.html
+++ b/foro.html
@@ -206,7 +206,7 @@
           <section class="box">
             <figure>
               <a href="index.html">
-                <img src="gn.png" alt="logo gn">
+                <img src="gn.jpg" alt="logo gn">
               </a>
             </figure>
           </section>
