--- a/foro.html
+++ b/foro.html
@@ -49,7 +49,7 @@
         <nav class="menu">
             <form method="get" class="form" action="https://store.epicgames.com/es-ES/browse?sortBy=releaseDate&sortDir=DESC&category=Game&count=40"target="_blank">
                 <input class="place" type="search" name="q" placeholder="Busca tu juego">
-                <button class="btn btn-primary" id = "#buscadorBoton" type="submit">Buscar</button>
+                <button class="btn btn-primary" id = "buscadorBoton" type="submit">Buscar</button>
           </form>
             <a href="https://geekspot.com.ar/productos1/gaming/?mpage=2" class="caja" target="_blank">Plataforma</a>
             <a href="#" class="caja">Foro</a>
